--- a/.gitignore
+++ b/.gitignore
@@ -361,4 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Hangfire.Sqlite/Database/hangfire.db
+
+/Hangfire.Sqlite/Database/*
