--- a/Hangfire.Sqlite/Hangfire.Sqlite.csproj
+++ b/Hangfire.Sqlite/Hangfire.Sqlite.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Hangfire.Storage.SQLite" Version="0.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\" />
+  </ItemGroup>
+
 </Project>
